--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ ratatui = "0.29.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.0"
+text-to-ascii-art = "0.1.10"
