--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-crossterm = "0.29.0"
 ratatui = "0.29.0"
+crossterm = "0.29.0"
+text-to-ascii-art = "0.1.10"
+regex = "1.10.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-regex = "1.0"
-text-to-ascii-art = "0.1.10"
+
+[patch.crates-io]
+text-to-ascii-art = { path = "vendor/text-to-ascii-art" }
