--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ crossterm = "0.29.0"
 regex = "1.10.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[lints.clippy]
+uninlined_format_args = "allow"
