--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ regex = "1.10.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 petgraph = "0.8.2"
+rusqlite = { version = "0.32", features = ["bundled"] }
 
 [lints.clippy]
 uninlined_format_args = "allow"
