--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ regex = "1.10.2"
 serde_json = "1.0"
 petgraph = "0.8.2"
 classy-sync = "0.1.1"
+dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.0", features = ["derive"] }
 rusqlite = { version = "0.37", features = ["bundled"] }
+reqwest = { version = "0.12", features = ["blocking", "json"] }
 
 [lints.clippy]
 uninlined_format_args = "allow"
